--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -13,9 +13,8 @@
 <%= render partial: "add_menu", locals:{
                 
         
-         section_title: "add menu_item", 
-         user_role: @current_user.role,
+         section_title_1: "add menu_item", 
          menu: Menu.all,
-         menu_item: MenuItem.all
+         section_title_2: "add menu"
             } %>
 
