--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -5,24 +5,36 @@
    <div class="below1">
      <div class="below1-right">
      <%if @current_user.role == "owner"%>
-      <% menu = Menu.all%>
-      <%= select_tag 'menu', options_for_select(menu.collect{ |u| [u.name] }),id: "menu"%>
-      <button onclick="myFunction()">Copy Text</button>
-     <p id="test"> </p>
+     <%= form_with(url:  setmenu_path, method: :post, class: "Add-menu") do %>
+          <select name="menu_id"
+                  class="Menu-select"
+                  onchange ='if(this.value != 0) { this.form.submit(); }'
+                  autofocus>
+
+              <option selected disabled>Choose a  menu</option>
+              <%Menu.all.each do |menu|%>
+                <option value=<%= menu.id %>, class="Menuselect-option">
+                    <%= menu.name %>
+                  </option>
+              <% end %>
+          </select>
+      <% end %>
+     
      <%end%>
    </div>
    </div>
-  <h1>Menu</h1>
+  <h1>Menu</h1> 
+  <%@menu%>
 <%= render partial: "menus", locals:{
-                
-         menus:MenuItem.breakfast,
+              
+         menus:MenuItem.breakfast(),
          section_title: "Breakfast", 
          user_role: @current_user.role
             } %>
 
 <%= render partial: "menus", locals:{
                 
-         menus:MenuItem.lunch,
+         menus:MenuItem.lunch(),
          section_title: "Lunch",
            user_role: @current_user.role
         
@@ -30,7 +42,7 @@
 
 <%= render partial: "menus", locals:{
                 
-         menus:MenuItem.dinner,
+         menus:MenuItem.dinner(),
          section_title: "Dinner",
          user_role: @current_user.role 
         
