--- a/app/views/menu_items/_menus.html.erb
+++ b/app/views/menu_items/_menus.html.erb
@@ -48,7 +48,7 @@
     <%if user_role == "owner"%>
      <td>
        <%= form_with(url: menu_item_path(item.id), method: :delete) do %>  
-        <input class="Img-Trash" type="image" src="delete.png">
+        <input class="Img-Trash" type="image" src="interface.png">
        <%end%>
      </td>
     <%end%>
