--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -24,7 +24,7 @@
    </div>
    </div>
   <h1>Menu</h1> 
-  <%=@menu%>
+  <p>displaying    <%= @menu.name%> </p>
 <%= render partial: "menus", locals:{
               
          menus:MenuItem.breakfast(@menu),
