--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,17 +20,14 @@
                <%= link_to "My Orders", orders_path %>
                <%= link_to "sign-out" ,destroy_session_path, method:"delete"%>
                 <%= link_to "Menus", menu_items_path %>
-                <%= link_to "Home", "/" %>
               <%end%>
               <%if @current_user.role == "clerk"%>
                <%= link_to "All orders" ,orders_path%>
-               <%= link_to "Home", "/" %>
                <%= link_to "sign-out" ,destroy_session_path, method:"delete"%>
                <%= link_to "Menus", menu_items_path %>
               <%end%>
               <%if @current_user.role == "owner"%>
                 <%= link_to "All orders" ,orders_path%>
-               <%= link_to "Home", "/" %>
                <%= link_to "sign-out" ,destroy_session_path, method:"delete"%>
                <%= link_to "Menus", menu_items_path %>
                <%= link_to "Add menu", menus_path %>
@@ -42,16 +39,9 @@
         <%= link_to "create account" ,users_path%>
         <%= link_to "login" ,sessions_path%>
         <%= link_to "Menus", menu_items_path %>
-        <%= link_to "Home", "/" %>
         <%end%> 
-       
-            
-           
-
-            
-   <span class="nav-head">
-     <p>Beach view Restaurant </p>
-   </span>
+     <p class="nav-head"><%=link_to "Beach view Restaurant","/"%> </p>
+   
   </div>
 
     <%if flash[:error] %>
