--- a/app/views/menus/_add_menu.html.erb
+++ b/app/views/menus/_add_menu.html.erb
@@ -1,15 +1,16 @@
 
-  <div>
-    <p class="Menu-title"><%=section_title_1%></p>
+
+  <div class="MenuItem-conatiner">
+    <p class="MenuItem-title"><%=section_title_1%></p>
     <%=form_with url:menu_items_path ,method: :post do |form|%>
 
       <div class="add-item">
-        <p class="item-label">item : </p>
+        <p class="item-label">Item Name: </p>
         <%= form.text_field :item ,class:"item-input"%>
       </div>
-      
+
       <div class ="add-section">
-      <p class="item-label">rate : </p>
+      <p class="item-label">Rate / item: </p>
       <%= form.text_field :rate, class:"item-input"%>
       </div>
 
@@ -19,12 +20,12 @@
       </div>
 
       <div class="add-section">
-        <p class="item-label">category : </p>
+        <p class="item-label">Category Id: </p>
         <%= form.select 'category', raw("<option>Breakfast</option><option>lunch</option><option>Dinner</option><optionCold Drinks</option>"), class:"item-input"%>
       </div>
 
       <div class="add-section">
-        <p class="item-label">menu : </p>
+        <p class="item-label">MenuName: </p>
         <%= form.select 'menu', options_for_select(menu.collect{ |u| [u.name, u.id] }) , class:"item-input"%>
       </div>
 
@@ -35,34 +36,30 @@
      <%end%>
   </div>
 
-  <div>
-    <p class="add-MenuHeader"><%= section_title_2%></p>
+  <div class="AddMenu-container">
+    <p class="add-MenuItemHeader"><%= section_title_2%></p>
     <%=form_with url:menus_path ,method: :post do |form|%>
-
-        <div class="add-item">
-          <p class="item-label">menu : </p>
-          <%= form.text_field :menu ,class:"item-input"%>
-         <div>
-         <div class="add-section">
-       <%=form.submit "add", class:"item-submit" %>
+      <div class="add-item">
+        <p class="item-label">Menu Name: </p>
+        <%= form.text_field :menu ,class:"item-input"%>
+      </div>
+      <div class="add-section">
+        <%=form.submit "add", class:"item-submit" %>
       </div>
     <%end%>
   </div>
 
-  <div>
+  <div class="Menu-container">
+    <p class="add-MenuItemHeader"><%=section_title_3%></p>
+    <em>Currently displaying-<%=@menu.name%> </em>
 
-            <p><%section_title_3%> </p>
-          <p>currently displaying <%=@menu.name%> </p>
-            <%menu.each do |m|%>
-             <li>
-               <%= m.name %>
-               <%= form_with(url: menu_path(m.id), method: :get) do %>
-                <%submit_tag("edit")%>
-               <%end%>
-              </li>
-             <% end %>
-              
-              
+      <%menu.each do |m|%>
+        <div class="Menu-list">
+          <%= m.name %>
+          <%= form_with(url: menu_path(m.id), method: :get) do %>
+          <%submit_tag("edit" , class: "form-submit")%>
+          <%end%>
+        </div>
+      <% end %>
+
   </div>
-    
-</div>
