--- a/app/views/customers/_users.html.erb
+++ b/app/views/customers/_users.html.erb
@@ -1,13 +1,23 @@
 
 
 <div>
-  <h4><%= section_title%> </h4>
-  <li>
-  <% users.each do |user|%> 
-  <strong> name:</strong>  <%= user.name%>
-  <strong> email:</strong> <%= user.email%>
-  <strong> joined on:</strong> <%=user.created_at.to_s(:short)%>
-   <br>
+  <%if users.first%>
+    <h4 class="User-role"><%= section_title%> </h4>
+    <table border = "1">
+        <tr>
+          <td><strong> Name:</strong></td>
+          <td><strong> Email:</strong></td>
+          <td><strong> Joined on:</strong></td>
+        </tr>
+      <% users.each do |user|%>
+        <tr>
+          <td><%= user.name%></td>
+          <td><%= user.email%></td>
+          <td><%=user.created_at.to_s(:short)%></td>
+        </tr>
+      <%end%>
+      </table>
+  <%else%>
+    <p>NO Active :<%=section_title %></p>
   <%end%>
-  </li>
 <div>
