--- a/app/views/menu_items/sample.html
+++ b/app/views/menu_items/sample.html
@@ -1,47 +1,67 @@
 <div class="MenuList">
-    <h1>Menu</h1>
-    <table>
-      <tr>
-        <th></th>
-        <th> Item</th>
-        <th>Rate</th>
-        <th>Cart</th>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>Idli</td>
-        <td>Rs.10</td>
-        <td><input type="checkbox"></td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Dosa</td>
-        <td>Rs.30</td>
-        <td><input type="checkbox"></td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>Fried Rice</td>
-        <td>RS.80</td>
-        <td><input type="checkbox"></td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td>Paneer Butter Masala</td>
-        <td>Rs.100</td>
-        <td><input type="checkbox"></td>
-      </tr>
-      <tr>
-        <td>5</td>
-        <td>Briyani</td>
-        <td>Rs.140</td>
-        <td><input type="checkbox"></td>
-      </tr>
-      <tr>
-        <td>6</td>
-        <td>Special seafood Delight</td>
-        <td>Rs.210</td>
-        <td><input type="checkbox"></td>
-      </tr>
-    </table>
-    </div>
+  <h1>Menu</h1>
+  <table>
+    <tr>
+      <th></th>
+      <th> Item</th>
+      <th>Rate</th>
+      <th>Cart</th>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>Idli</td>
+      <td>Rs.10</td>
+      <td><input type="checkbox"></td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>Dosa</td>
+      <td>Rs.30</td>
+      <td><input type="checkbox"></td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>Fried Rice</td>
+      <td>RS.80</td>
+      <td><input type="checkbox"></td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>Paneer Butter Masala</td>
+      <td>Rs.100</td>
+      <td><input type="checkbox"></td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>Briyani</td>
+      <td>Rs.140</td>
+      <td><input type="checkbox"></td>
+    </tr>
+    <tr>
+      <td>6</td>
+      <td>Special seafood Delight</td>
+      <td>Rs.210</td>
+      <td><input type="checkbox"></td>
+    </tr>
+  </table>
+</div>
+
+
+
+
+<%= order = Order.current_order(@customer)%>
+
+<%=orderitem = OrderItem.find_by(order_id: order.id, menu_item_id: item.id)%>
+
+
+<%if orderitem%>
+<p> quantity :
+  <%= link_to "−", remove_path(id:orderitem.id), method: "post", class: "minus" %>
+  <%= orderitem.quantity %>
+  <%= link_to "＋", add_path(id:orderitem.id), method: "post", class: "plus" %>
+</p>
+
+<%else%>
+<%= form_with(url: offline_customer_path(id:item.id), method: :post) do %>
+<%= button_tag 'Add',type:'submit'%>
+<% end %>
