--- a/app/views/menus/_add_menu.html.erb
+++ b/app/views/menus/_add_menu.html.erb
@@ -16,12 +16,12 @@
 
       <div class="add-section">
         <p class="item-label">description : </p>
-        <%= form.select'description', raw("<option>south indian</option><option>north indian</option><option>chineese</option><option>tandoori</option>"), class:"item-input"%>
+        <%= form.select'description', raw("<option selected disabled>select</option><option>south indian</option><option>north indian</option><option>chineese</option><option>tandoori</option>"), class:"item-input"%>
       </div>
 
       <div class="add-section">
         <p class="item-label">Category Id: </p>
-        <%= form.select 'category', raw("<option>Breakfast</option><option>lunch</option><option>Dinner</option><optionCold Drinks</option>"), class:"item-input"%>
+        <%= form.select 'category', raw("<option selected disabled>select</option><option>Breakfast</option><option>lunch</option><option>Dinner</option><optionCold Drinks</option>"), class:"item-input"%>
       </div>
 
       <div class="add-section">
