--- a/app/assets/stylesheets/menu_items.css
+++ b/app/assets/stylesheets/menu_items.css
@@ -168,8 +168,12 @@ tr:nth-child(even) {
   color: #06D85F;
 }
 .popup .content {
-  max-height: 30%;
+  max-height: 60%;
   overflow: auto;
+  display: block;
+  overflow-y: initial;
+  height: 450px;
+  overflow-y: auto;
 }
 
 @media screen and (max-width: 700px){
