--- a/app/views/orders/_user-cart.html.erb
+++ b/app/views/orders/_user-cart.html.erb
@@ -41,8 +41,8 @@
             delivered at: <%=order.delivered_at%>
             order status: <span class=<%= order.status=="received" ? "OrderStatus-received" : "OrderStatus-delivered" %> > <%=order.status%> </span>
             <%user_id = order.user_id %>
-            <% user = User.find(user_id)%>
-            ordered by: <%=user.name %>
+            <% user = User.find_by(id:user_id)%>
+            ordered by: 
           </li>
         <%end%>
       <%end%>
