user can repeat previous order

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,5 +2,6 @@
 
 <%= render partial: "show_order",locals:{
     order_items: @order_items,
-    order: @order
+    order: @order,
+    user_role: @current_user.role
 }%>
