--- a/app/assets/stylesheets/home.css.erb
+++ b/app/assets/stylesheets/home.css.erb
@@ -14,10 +14,12 @@
 
 .container-below {
   text-align: center;
-  margin-top: 250px;
+  margin-top: 320px;
+  margin-left:45px;
 }
 
 .below-text {
+
   font-size: xx-large;
   font-family: "Lato", sans-serif;
   font-weight: 900;
@@ -50,7 +52,7 @@
 }
 .container-below .below-text :hover {
   text-shadow: 0 0 8px #ff0000;
-  text-decoration: underline;
+
 }
 
 .container-below .below-text :hover + img {
