--- a/app/assets/stylesheets/about.css
+++ b/app/assets/stylesheets/about.css
@@ -157,7 +157,7 @@ input[name="r"] {
   text-align: center;
   font-size: 20px;
   line-height: 24px;
-  transition: ;
+  transition: 1s;
   -webkit-transition: all 0.6s ease;
   -moz-transition: all 0.6s ease;
   -o-transition: all 0.6s ease;
