--- a/app/assets/stylesheets/menu_items.css
+++ b/app/assets/stylesheets/menu_items.css
@@ -20,17 +20,17 @@
 
     align-items: center;
     justify-content: center;
-    margin-top: 40 px;
+    margin-top: 40px;
 
 }
  h1{
-	margin-left: 100 px;
+	margin-left: 100px;
 	padding: 0;
 	text-align: center;
 	top: 50%;
 	margin-right: 0px;
   width: inherit;
-  margin-top: 200 px;
+  margin-top: 200px;
   margin-bottom: 0;
 }
 body{
@@ -69,7 +69,7 @@ body{
 .button {
   font-size: 1em;
   padding: 10px;
-  color: blue
+  color: blue;
   border: 2px solid #06D85F;
   border-radius: 20px/50px;
   text-decoration: none;
