--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -1,7 +1,7 @@
 .user-body {
   background: url(https://images.pexels.com/photos/995743/pexels-photo-995743.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
 
-  /* Center and scale the image nicely */
+  
   height: 100vh;
   margin: 0px;
 
@@ -14,8 +14,8 @@
   padding-left: 100px;
   border: 5px solid black;
   border-radius: 25px;
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
+  background-color: rgb(0, 0, 0); 
+  background-color: rgba(0, 0, 0, 0.4); 
   color: white;
   font-weight: bold;
   border: 3px solid #f1f1f1;
