fixed menu_items rendering problem

--- a/app/views/menu_items/_menus.html.erb
+++ b/app/views/menu_items/_menus.html.erb
@@ -1,6 +1,6 @@
 
 <main id="table-body">
-   <div class= <%=(@current_user.role == "owmner")?"MenuList-box":"MenuList" %>>
+   <div class= <%=(@current_user.role == "user")?"MenuList":"MenuList-box" %>>
       <p><%=section_title%></p>
 
       <section class="menu-card">
