--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,7 @@
             <a href="#" class="fb-icon"></a>
             <%= link_to "About Us","/about"%>
             <%= link_to "Sign-Out" ,destroy_session_path, method:"delete"%>
+            <%= link_to "Report", "/report"%>
             <%= link_to "All Orders" ,orders_path%>
             <%= link_to "Edit Menu", menus_path %>
             <%= link_to "Users", customers_path %>
