--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,5 +4,6 @@
     cart: @orders,
     user_role: @current_user.role,
     delivered: @delivered,
-    user_delivered: @user_delivered
+    user_delivered: @user_delivered,
+    all_orders: @all_orders
 }%>
