add menu on menus page

--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,6 +1,6 @@
 
 <h3 class="Menu-heading">
-     Make a new menu or a add a item to a menu
+     Make a new menu or a edit a  menu
 </h3>
 
 <%= render partial: "add_menu", locals:{
