--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -23,7 +23,51 @@
       <%end%>
     </div>
   </div>
-<div class= <%=(@current_user.role == "owmner")?"cartContainer":"cart-container" %> >
+<%if @current_user.role =="owner"%>
+  
+  <div class="MenuItem-conatiner">
+    <h4 class="MenuItem-title"></h4>
+    <%=form_with url:menu_items_path(menu_id:@menu.id) ,method: :post do |form|%>
+
+      <div class="add-item">
+        <p class="item-label">Item Name: </p>
+        <%= form.text_field :item ,class:"item-input" %>
+      </div>
+
+      <div class ="add-section">
+      <p class="item-label">Item Rate: </p>
+      <%= form.text_field :rate, class:"item-input"%>
+      </div>
+
+      <div class="add-section">
+        <p class="item-label">description : </p>
+        <%= form.select'description', raw("<option selected disabled>select</option><option>South Indian</option><option>North Indian</option><option>Starters</option><option>Rice And Noodles</option><option>Briyani</option><option>Italian</option>
+        <option>Tandoori</option><option>Milk Shakes</option>"), class:"item-input"%>
+      </div>
+
+      <div class="add-section">
+        <p class="item-label">Item Image: </p>
+        <%= form.text_field 'image' ,class:"item-input"%>
+      </div>
+      <div class="add-section">
+        <p class="item-label">Category of: </p>
+        <%= form.select 'category', raw("<option selected disabled>select</option><option>Breakfast</option><option>lunch</option><option>Dinner</option><option>Cold Drinks</option>"), class:"item-input"%>
+      </div>
+
+      
+
+      <div class="add-section">
+        <%=form.submit "add", class:"item-submit" %>
+      </div>
+
+     <%end%>
+  </div>
+
+    
+  
+
+<%end%>
+<div class= <%=(@current_user.role == "owmner") ? "cartContainer":"cart-container" %> >
 <div class="display-element">
   <h1>Menu</h1>
   <h3 class="Menu-Head"><em>Displaying <%= @menu.name%></em></h3>
