--- a/app/assets/stylesheets/home.css.erb
+++ b/app/assets/stylesheets/home.css.erb
@@ -123,6 +123,8 @@
   display: block;
   line-height: 25px;
   text-align: center;
+  font-size: 23px;
+  font-weight: 4px;
   justify-content: center;
 }
 
