--- a/app/views/orders/_user-cart.html.erb
+++ b/app/views/orders/_user-cart.html.erb
@@ -64,7 +64,7 @@
        <img src="https://t4.ftcdn.net/jpg/01/93/79/17/240_F_193791715_MVfwSXIrACJp7t5UkQI24ClizBfmMZAZ.jpg" class="EmptyOrder">
       <%end%>
     <%end%>
-
+<p> (* click on the id to get more details) </p>
   <%else%>
     <h3 class="Order-empty">No Orders yet ?! </h3>
     <h3 class="Order-empty"> Place an order with just few clicks !! </h3>
