--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>CafeManager</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+     
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -20,6 +20,7 @@
             <a href="#" class="fb-icon"></a>
             <%= link_to "About Us","/about"%>
             <%= link_to "Sign-Out" ,destroy_session_path, method:"delete"%>
+            <%= link_to  @current_user.name, user_path(id:@current_user.id)%>
             <%= link_to "My Orders", orders_path %>
             <%= link_to "My Cart", order_items_path %>
             <%= link_to "Menus", menu_items_path %>
@@ -29,6 +30,7 @@
             <a href="#" class="insta-icon"></a>
             <a href="#" class="fb-icon"></a>
             <%= link_to "About Us","/about"%>
+
             <%= link_to "Sign-Out" ,destroy_session_path, method:"delete"%>
             <%= link_to "All Orders" ,orders_path%>
             <%= link_to "My Cart", order_items_path %>
